Update wording for the Deimos Down promo card

--- a/src/locales/br/promo.json
+++ b/src/locales/br/promo.json
@@ -139,7 +139,7 @@
   "You start with 44 M€. As your first action, reveal cards until you have revealed a microbe tag. Take it and discard the rest.": "Você começa com 44 M€. Como sua primeira ação, compre uma carta e micróbio.",
   "Effect: when a microbe tag is played, incl. this, THAT PLAYER gains 2 M€, or adds a microbe to THAT card, and you gain 2 M€.": "Efeito: Quando um ícone de micróbio é jogado, incluindo este, AQUELE JOGADOR recebe 2 M€ ou adiciona um micróbio ÀQUELA carta, e você recebe 2 M€.",
 
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "Aumente a temperatura 3 níveis e receba 4 de aço. Coloque este tile NÃO ADJACENTE a uma cidade. Remova até 6 plantas de um jogador.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "Aumente a temperatura 3 níveis e receba 4 de aço. Coloque este tile NÃO ADJACENTE a uma cidade. Remova até 6 plantas de um jogador.",
 
   "Astrodrill": "Astrodrill",
   "You start with 38 M€ and 3 asteroid resources.": "Você começa com 38 M€ e 3 recursos de asteroide.",
