--- a/src/locales/cn/promo_cards.json
+++ b/src/locales/cn/promo_cards.json
@@ -56,7 +56,7 @@
   "Increase your steel production 1 step. Copy the PRODUCTION BOXES of 2 of your cards with building tags.": "提升1点钢铁产能。复制你2张建筑标志卡牌的产能效果。",
 
   "Deimos Down": "火卫二陨落",
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "提升3级温度并获得4个钢。将此板块放置在不与其他城市相邻的位置。移除任意玩家最多6个植物。",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "提升3级温度并获得4个钢。将此板块放置在不与其他城市相邻的位置。移除任意玩家最多6个植物。",
 
   "Directed Heat Usage": "热能定向利用",
   "Action: Spend 3 heat to gain either 4 M€ or 2 plants.": "行动：消耗3点热能资源，选择获得4M€或2个植物。",
