--- a/src/locales/es/promo.json
+++ b/src/locales/es/promo.json
@@ -135,7 +135,7 @@
   "You start with 44 M€. As your first action, reveal cards until you have revealed a microbe tag. Take it and discard the rest.": "Comienza con 44 M€. Como primera acción, revela cartas hasta que hayas revelado una carta de tipo microbio. Róbala y descarta el resto.",
   "Effect: when a microbe tag is played, incl. this, THAT PLAYER gains 2 M€, or adds a microbe to THAT card, and you gain 2 M€.": "Efecto: cuando se juega una carta de tipo microbio, incluida esta, ESE JUGADOR gana 2 M€, o le añade un microbio a ESA carta, y tú ganas 2 M€.",
 
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.":"Aumenta la temperatura 3 niveles y obtén 4 de acero. Coloca esta loseta NO ADYACENTE a una ciudad. Elimina hasta 6 plantas de un jugador. ",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.":"Aumenta la temperatura 3 niveles y obtén 4 de acero. Coloca esta loseta NO ADYACENTE a una ciudad. Elimina hasta 6 plantas de un jugador. ",
 
   "Astrodrill":"Astrotaladro",
   "You start with 38 M€ and 3 asteroid resources.":"Comienza con 38 M€ y 3 recursos de asteroide.",
