--- a/src/locales/hu/ares_cards.json
+++ b/src/locales/hu/ares_cards.json
@@ -42,7 +42,7 @@
   "Great Dam": "Nagy gát",
   "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile. The tile grants an ADJACENCY BONUS of 2 Energy.": "Kijátszási feltétel: legalább 4 Óceánlapka. Növeld az energiatermelésed 2 értékkel! Helyezd le ezt a lapkát EGY ÓCEÁNLAPKA MELLÉ! Ez a lapka 2 energia LEHELYEZÉSI BÓNUSZT ad.",
   "Deimos Down": "Deiomos \"leszállt\"",
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. It provides adjacency bonus of 1 asteroid and 1 steel.": "Növeld a hőmérsékletet 3 értékkel és kapj 4 acélt! Helyezd le ezt a lapkát EGY MÁSIK VÁROS LAPKA MELLÉ! Ez a lapka 1 aszteroida és 1 acél LEHELYEZÉSI BÓNUSZT ad.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. It provides adjacency bonus of 1 asteroid and 1 steel.": "Növeld a hőmérsékletet 3 értékkel és kapj 4 acélt! Helyezd le ezt a lapkát EGY MÁSIK VÁROS LAPKA MELLÉ! Ez a lapka 1 aszteroida és 1 acél LEHELYEZÉSI BÓNUSZT ad.",
   "Ecological Zone": "Ökológia övezet",
   "Effect: When you play an animal or plant tag INCLUDING THESE, add an animal to this card.": "Hatás: Ha kijátszol egy állat vagy palánta ikont - beleértve ezt is - tegyél egy állatot erre a kártyára!",
   "The tile grants an ADJACENCY BONUS of 1 animal. 1 VP per 2 animals on this card.": "Ez a lapka 1 állat LEHELYEZÉSI BÓNUSZT ad. 1 GyP minden 2 állat után ezen a kártyán.",
