--- a/src/locales/hu/promo_cards.json
+++ b/src/locales/hu/promo_cards.json
@@ -151,7 +151,7 @@
   "Add 2 asteroids to this card.": "Rakj 2 aszteroidát erre a kártyára!",
   "Stanford Torus": "Stanford Tórusz",
   "Place a city tile IN SPACE, outside and separate from the planet.": "Helyezz le 1 Városlapkát AZ ŰRBE, a bolygótól jól láthatóan elkülönítve!",
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "Növeld a hőmérsékletet 3 értékkel! Rakd le ezt a lapkát úgy, hogy EGYETLEN VÁROSSAL SE LEGYEN SZOMSZÉDOS! Kapsz 4 acélt. Távolíts el legfeljebb 6 palántát bármelyik játékostól!",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "Növeld a hőmérsékletet 3 értékkel! Rakd le ezt a lapkát úgy, hogy EGYETLEN VÁROSSAL SE LEGYEN SZOMSZÉDOS! Kapsz 4 acélt. Távolíts el legfeljebb 6 palántát bármelyik játékostól!",
   "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile.": "Kijátszási feltétel: legalább 4 Óceánlapka. Növeld az energiatermelésed 2 értékkel! Rakd le ezt a lapkát egy Óceánlapkával SZOMSZÉDOS területre!",
   "Decrease your energy production 4 steps and increase your plant production 2 steps. Raise your TR 3 steps.": "Csökkentsd az energiatermelésed 4 értékkel és növeld a palántatermelésed 2 értékkel. Növeld a TR-ed 3 értékkel!",
   "Requires 8 oceans. 1 VP for each animal on this card.": "Kijátszási feltétel: legalább 8 Óceánlapka. 1 GyP jár minden, ezen a kártyán lévő állat után.",
