--- a/src/locales/ko/promo_cards.json
+++ b/src/locales/ko/promo_cards.json
@@ -206,7 +206,7 @@
   "Place a city tile IN SPACE, outside and separate from the planet.": "화성 바깥의 텅 빈 우주공간에 도시 타일 1장 배치.",
 
 
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "기온 3단계 상승. 강철 자원 4개 획득. 아무 1명의 식물 자원 6개까지 제거. 도시 타일과 인접하지 않은 빈 구역 한 곳에 타일 배치.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "기온 3단계 상승. 강철 자원 4개 획득. 아무 1명의 식물 자원 6개까지 제거. 도시 타일과 인접하지 않은 빈 구역 한 곳에 타일 배치.",
 
   "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile.": "조건: 해양 타일 4장 이상.) (에너지 생산력 2증가. 해양 타일과 인접한 빈 구역 한 곳에 타일 배치.",
 
