--- a/src/locales/nb/promo_cards.json
+++ b/src/locales/nb/promo_cards.json
@@ -13,7 +13,7 @@
   "Gain 2 titanium.": "Få 2 titan.",
 
   "Deimos Down:promo": "Deimos Ned",
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "Øk temperaturen med 3 trinn og få 4 stål. Denne brikken kan ikke plasseres inntil by-brikker. Fjern opptil 6 planter fra en spiller.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "Øk temperaturen med 3 trinn og få 4 stål. Denne brikken kan ikke plasseres inntil by-brikker. Fjern opptil 6 planter fra en spiller.",
 
   "Teslaract": "Teslarakt",
   "Action: Spend 1 energy production to gain 1 plant production.": "Handling: Reduser din energiproduksjon 1 steg for å øke din planteproduksjon med 1 steg.",
