--- a/src/locales/pl/promo_cards.json
+++ b/src/locales/pl/promo_cards.json
@@ -122,7 +122,7 @@
 
 	"Stanford Torus": "Torus Stanforda",
     "Place a city tile IN SPACE, outside and separate from the planet.": "Umieść obszar miasta na zarezerwowanym polu.",
-    "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "Podnieś temperaturę o 3 poziomy. Otrzymujesz 4 jednostki stali. Usuń do 6 jednostek roślinności dowolnego gracza. Umieść ten obszar na zarezerwowanym polu.",
+    "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "Podnieś temperaturę o 3 poziomy. Otrzymujesz 4 jednostki stali. Usuń do 6 jednostek roślinności dowolnego gracza. Umieść ten obszar na zarezerwowanym polu.",
     "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile.": "Na planszy muszą się znajdować co najmniej 4 obszary oceanów. Podnieś swoją produkcję energii o 2 poziomy. Umieść ten obszar na planszy na polu sąsiadującym z obszarem oceanu.",
     "Decrease your energy production 4 steps and increase your plant production 2 steps. Raise your TR 3 steps.": "Obniż swoją produkcję energii o 4 poziomy. Podnieś swoją produkcję roślinności o 2 poziomy. Podnieś swój Współczynnik Terraformacji o 3.",
     "Requires 8 oceans. 1 VP for each animal on this card.": "Na planszy musi znajdować się co najmniej 8 obszarów oceanów. Otrzymujesz 1 PZ za każdą jednostkę zwierząt na tej karcie.",
