--- a/src/locales/ua/promo_cards.json
+++ b/src/locales/ua/promo_cards.json
@@ -195,7 +195,7 @@
   "Stanford Torus": "Стенфордський торус",
   "Place a city tile IN SPACE, outside and separate from the planet.": "Розмістити плитку міста В КОСМОСІ, поза і окремо від планети.",
 
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "Підвищити температуру на 3 кроки і отримати 4 сталі. Розмістити цю плитку НЕ ПРИЛЕГЛО до жодної іншої плитки міста. Видалити до 6 рослин у будь-якого гравця.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "Підвищити температуру на 3 кроки і отримати 4 сталі. Розмістити цю плитку НЕ ПРИЛЕГЛО до жодної іншої плитки міста. Видалити до 6 рослин у будь-якого гравця.",
 
   "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile.": "Вимагає 4 океанських плиток. Збільшити виробництво енергії на 2 кроки. Розмістити цю плитку ПРИЛЕГЛО до океанської плитки.",
 
