--- a/src/locales/jp/promo_cards.json
+++ b/src/locales/jp/promo_cards.json
@@ -200,7 +200,7 @@
   "Place a city tile IN SPACE, outside and separate from the planet.": "宇宙空間上に都市タイルを配置.",
 
   "Deimos Down:promo": "ダイモス落とし",
-  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no other city tile. Remove up to 6 plants from any player.": "温度+3段階. 4建材獲得. 都市タイルに隣接しないように特殊タイルを配置. 望むならプレイヤー1人から最大6植物除去.",
+  "Raise temperature 3 steps and gain 4 steel. Place this tile ADJACENT TO no city tile. Remove up to 6 plants from any player.": "温度+3段階. 4建材獲得. 都市タイルに隣接しないように特殊タイルを配置. 望むならプレイヤー1人から最大6植物除去.",
 
   "Great Dam:promo": "水力発電",
   "Requires 4 ocean tiles. Increase your energy production 2 steps. Place this tile ADJACENT TO an ocean tile.": "条件：海洋4枚以上. 電力産出+2. 海洋タイルに隣接させて特殊タイルを配置.",
