Fix Deepmining, which was not clear.
The card description is being replaced with the Underworld 2 card
description, and the behavior will match.

Fixes #7234

--- a/src/locales/de/underworld_cards.json
+++ b/src/locales/de/underworld_cards.json
@@ -40,7 +40,7 @@
 "Requires 1 corruption. Increase your M€, steel, and energy production 1 step each.": "Benötigt 1 Korruption. Erhöhe deine M€-, Stahl- und Energieproduktion um jeweils 1.",
 
 "Deepmining": "Tiefbohrung",
-"Excavate an IDENTIFIED underground resource ANYWHERE ON MARS with a steel or titanium placement bonus. Increase that production 1 step.": "Grabe eine IDENTIFIZIERTE unterirdische Ressource ÜBERALL AUF DEM MARS mit einem Stahl- oder Titan-Platzierungsbonus aus. Erhöhe diese Produktion um 1 Stufe.",
+"Excavate an underground resource that depicts steel or titanium ANYWHERE ON THE BOARD. Increase your production of that resource 1 step.": "Grabe eine IDENTIFIZIERTE unterirdische Ressource ÜBERALL AUF DEM MARS mit einem Stahl- oder Titan-Platzierungsbonus aus. Erhöhe diese Produktion um 1 Stufe.",
 
 "Deepnuking": "Tiefschürfen",
 "Excavate 2 underground resources. Remove up to 3 plants from any player.": "Grabe 2 unterirdische Ressourcen aus. Entferne bis zu 3 Pflanzen von einem beliebigen Spieler.",
