--- a/src/locales/hu/underworld_cards.json
+++ b/src/locales/hu/underworld_cards.json
@@ -27,7 +27,7 @@
   "Cut-throat Budgeting": "Egyszerű költségvetés-tervezés",
   "Requires 1 corruption. Increase your M€, steel, and energy production 1 step each.": "Kijátszási feltétel: legalább 1 korrupció. Növeld a M€-, acél- és energiatermelésed 1-1 értékkel!",
   "Deepmining": "Mélybányászat",
-  "Excavate an IDENTIFIED underground resource ANYWHERE ON MARS with a steel or titanium placement bonus. Increase that production 1 step.": "Áss ki egy AZONOSÍTOTT földalatti erőforrást BÁRHOL A MARSON, amin van acél vagy titán lehelyezési bónusz! Növeld annak termelését 1 értékkel!",
+  "Excavate an underground resource that depicts steel or titanium ANYWHERE ON THE BOARD. Increase your production of that resource 1 step.": "Áss ki egy AZONOSÍTOTT földalatti erőforrást BÁRHOL A MARSON, amin van acél vagy titán lehelyezési bónusz! Növeld annak termelését 1 értékkel!",
   "Deepnuking": "Földalatti atomrobbantás",
   "Excavate 2 underground resources. Remove up to 3 plants from any player.": "Áss ki 2 földalatti erőforrást! Távolíts el BÁRKITŐL 3 palántát!",
   "Earthquake Machine": "Földrengés gép",
