--- a/src/locales/jp/underworld_cards.json
+++ b/src/locales/jp/underworld_cards.json
@@ -39,7 +39,7 @@
     "Requires 1 corruption. Increase your M€, steel, and energy production 1 step each.": "条件：汚職1つ以上. MC産出+1. 建材産出+1. 電力産出+1.",
 
     "Deepmining": "深掘り",
-    "Excavate an IDENTIFIED underground resource ANYWHERE ON MARS with a steel or titanium placement bonus. Increase that production 1 step.": "配置ボーナスに建材 または チタンを含む地下資源が判明したマスで地下資源を採掘する. 入手した資材の産出+1.",
+    "Excavate an underground resource that depicts steel or titanium ANYWHERE ON THE BOARD. Increase your production of that resource 1 step.": "配置ボーナスに建材 または チタンを含む地下資源が判明したマスで地下資源を採掘する. 入手した資材の産出+1.",
 
     "Deepnuking": "核掘り",
     "Excavate 2 underground resources. Remove up to 3 plants from any player.": "2回地下資源を採掘する. 望むならプレイヤー1人から最大3植物除去.",
