--- a/src/locales/ko/underworld_cards.json
+++ b/src/locales/ko/underworld_cards.json
@@ -37,7 +37,7 @@
 "Requires 1 corruption. Increase your M€, steel, and energy production 1 step each.": "",
 
 "Deepmining": "",
-"Excavate an IDENTIFIED underground resource ANYWHERE ON MARS with a steel or titanium placement bonus. Increase that production 1 step.": "",
+"Excavate an underground resource that depicts steel or titanium ANYWHERE ON THE BOARD. Increase your production of that resource 1 step.": "",
 
 "Deepnuking": "",
 "Excavate 2 underground resources. Remove up to 3 plants from any player.": "",
