--- a/src/locales/ua/underworld_cards.json
+++ b/src/locales/ua/underworld_cards.json
@@ -39,7 +39,7 @@
   "Requires 1 corruption. Increase your M€, steel, and energy production 1 step each.": "Вимагає 1 одиницю корупції. Збільште ваше виробництво M€, сталі та енергії на 1 крок кожне.",
 
   "Deepmining": "Глибинна розробка",
-  "Excavate an IDENTIFIED underground resource ANYWHERE ON MARS with a steel or titanium placement bonus. Increase that production 1 step.": "Видобути ІДЕНТИФІКОВАНИЙ підземний ресурс БУДЬ-ДЕ НА МАРСІ з бонусом за розміщення сталі або титану. Збільште це виробництво на 1 крок.",
+  "Excavate an underground resource that depicts steel or titanium ANYWHERE ON THE BOARD. Increase your production of that resource 1 step.": "Видобути ІДЕНТИФІКОВАНИЙ підземний ресурс БУДЬ-ДЕ НА МАРСІ з бонусом за розміщення сталі або титану. Збільште це виробництво на 1 крок.",
 
   "Deepnuking": "Глибинне вибухання",
   "Excavate 2 underground resources. Remove up to 3 plants from any player.": "Видобути 2 підземні ресурси. Видаліть до 3 рослин від будь-якого гравця.",
