Replace T. Economizer with Incorporator
Fixes #7281

--- a/src/locales/bg/awards.json
+++ b/src/locales/bg/awards.json
@@ -58,8 +58,8 @@
     "Have the most animal resources": "Имайте най-много ресурси от животни",
     "Biologist": "Биолог",
     "Have the most animal, plant, and microbe tags in play": "Имайте най-много етикети за животни, растения и микроби в играта",
-    "T. Economizer": "Т. Икономист",
-    "Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "Имайте най-много карти с базова стойност от 10 M€ или по-малко (без събития)",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Имайте най-много карти с базова стойност от 10 M€ или по-малко (без събития)",
     "T. Politician": "Политик",
     "Place the most delegates": "Поставете най-много делегати",
     "Urbanist": "Урбанист",
