--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -171,8 +171,8 @@
     "Own the most animal and microbe resources": "拥有最多的动物和微生物资源。",
     "Biologist": "生物学家",
     "Have the most animal, plant, and microbe tags in play": "拥有最多的动物、植物和微生物标志（不包括事件卡）。",
-    "T. Economizer": "节约者",
-    "Play the most cards with a base cost of 10 M€ or less": "拥有最多费用为10M€或更少的卡牌。",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "拥有最多费用为10M€或更少的卡牌。",
     "T. Politician": "政治家",
     "Place the most delegates": "拥有最多放置的代表数量。",
     "Urbanist": "城市规划师",
