--- a/src/locales/jp/UI.json
+++ b/src/locales/jp/UI.json
@@ -213,8 +213,8 @@
     "Own the most animal and microbe resources": "カード上の微生物と動物の合計数",
     "Biologist": "生態王",
     "Have the most animal, plant, and microbe tags in play": "生態系タグの合計数",
-    "T. Economizer": "節約王",
-    "Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "プレイ済みのプレイコスト10MC以下のカード枚数",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "プレイ済みのプレイコスト10MC以下のカード枚数",
     "T. Politician": "政治王",
     "Place the most delegates": "代議員配置数",
     "Urbanist": "都会王",
