--- a/src/locales/ko/UI.json
+++ b/src/locales/ko/UI.json
@@ -223,8 +223,8 @@
     "Own the most animal and microbe resources": "자기 소유의 동물/미생물 자원이 제일 많은 플레이어.",
     "Biologist": "바이오기업상",
     "Have the most animal, plant, and microbe tags in play": "자기 소유의 동물/식물/미생물 태그가 제일 많은 플레이어.",
-    "T. Economizer": "중소기업상",
-    "Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "기본 비용이 10 M€ 이하인 카드(사건형 제외)를 제일 많이 추진한 플레이어.",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "기본 비용이 10 M€ 이하인 카드(사건형 제외)를 제일 많이 추진한 플레이어.",
     "T. Politician": "정치기업상",
     "Place the most delegates": "의원석에 자기 소유의 의원이 제일 많은 플레이어.",
     "Urbanist": "도시기업상",
