--- a/src/locales/nb/ui.json
+++ b/src/locales/nb/ui.json
@@ -207,8 +207,8 @@
 	"Own the most animal and microbe resources": "Ha flest dyr- og mikrobe-ressurser.",
 	"Biologist": "Biolog",
 	"Have the most animal, plant, and microbe tags in play": "Ha flest dyr-, plante- og mikrobe-symboler i spill (hendelseskort teller ikke).",
-	"T. Economizer": "T. Økonom",
-	"Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "Ha flest prosjektkort i spill med en basis kost på 10 M€ eller mindre (hendelseskort teller ikke).",
+	"Incorporator": "",
+	"Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Ha flest prosjektkort i spill med en basis kost på 10 M€ eller mindre (hendelseskort teller ikke).",
 	"T. Politician": "Politiker",
 	"Place the most delegates": "Plasser flest delegater.",
 	"Urbanist": "Byplanlegger",
