--- a/src/locales/nl/ui.json
+++ b/src/locales/nl/ui.json
@@ -208,8 +208,8 @@
     "Most animal and microbe resources": "De meeste dierlijke en microbe grondstoffen hebben.",
     "Biologist": "Bioloog",
     "Having the most animal, plant, and microbe tags in play": "De meeste dieren-, planten- en microbensymbolen in het spel (gebeurteniskaarten tellen niet mee).",
-    "T. Economizer": "Kleine Ondernemer",
-    "Most cards in play costing 10 M€ or less": "De meeste gespeelde kaarten die 10 M€ of minder kosten.",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "De meeste gespeelde kaarten die 10 M€ of minder kosten.",
     "T. Politician": "Politicus",
     "Most delegates placed during the game": "De meeste afgevaardigden geplaatst tijdens het spel.",
     "Urbanist": "Stedenbouwkundige",
