--- a/src/locales/pl/ui.json
+++ b/src/locales/pl/ui.json
@@ -231,8 +231,8 @@
   "Own the most animal and microbe resources": "Gracz posiada łącznie najwięcej jednostek zwierząt i mikrobów.",
   "Biologist": "Biolog",
   "Have the most animal, plant, and microbe tags in play": "Gracz posiada łącznie najwięcej symboli Zwierząt, Roślin i Mikrobów.",
-  "T. Economizer": "Łowca Promocji",
-  "Play the most cards with a base cost of 10 M€ or less": "Gracz zagrał najwięcej kart o koszcie nie większym niż 10 M€.",
+  "Incorporator": "",
+  "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Gracz zagrał najwięcej kart o koszcie nie większym niż 10 M€.",
   "Botanist": "Botanik",
   "Have the most plant production": "Gracz posiada największy poziom produkcji roślinności.",
   "Promoter": "Koordynator",
