--- a/src/locales/ua/ui.json
+++ b/src/locales/ua/ui.json
@@ -218,8 +218,8 @@
   "Own the most animal and microbe resources": "Володіти найбільшою кількістю тваринних та мікробних ресурсів",
   "Biologist": "Біолог",
   "Have the most animal, plant, and microbe tags in play": "Мати найбільшу кількість тегів тварин, рослин та мікробів у грі",
-  "T. Economizer": "T. Економіст",
-  "Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "Мати найбільшу кількість проектних карт у грі з базовою вартістю 10 M€ або менше (не події)",
+  "Incorporator": "",
+  "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Мати найбільшу кількість проектних карт у грі з базовою вартістю 10 M€ або менше (не події)",
   "T. Politician": "Політик",
   "Place the most delegates": "Розмістити найбільшу кількість делегатів",
   "Urbanist": "Урбаніст",
