--- a/src/locales/ru/awards.json
+++ b/src/locales/ru/awards.json
@@ -58,8 +58,8 @@
     "Have the most animal resources": "Наибольшее количество животных",
     "Biologist": "Биолог",
     "Have the most animal, plant, and microbe tags in play": "Наибольшее суммарное количество микробов и животных и растений",
-    "T. Economizer": "Экономист",
-    "Have the most project cards in play with a base cost of 10 M€ or less (not events.)": "Нибольшее количество карт стоимостью 10 M€ или меньше (кроме событий)",
+    "Incorporator": "",
+    "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Нибольшее количество карт стоимостью 10 M€ или меньше (кроме событий)",
     "T. Politician": "Политик",
     "Place the most delegates": "Наибольшее количество размещенных делегатов",
     "Urbanist": "Урбанист",
