--- a/src/locales/fr/game_end.json
+++ b/src/locales/fr/game_end.json
@@ -33,22 +33,5 @@
     "Download game log": "Télécharger le journal de la partie",
     "Don't be greedy on card selection": "Ne soyez pas gourmand sur le choix des cartes",
     "Gen:": "Gén :",
-    "of 14": "sur 14",
-
-    "Claimed Builder milestone": "Objectif Constructeur validé",
-    "Claimed Diversifier milestone": "Objectif Diversificateur validé",
-    "Claimed Ecologist milestone": "Objectif Ecologiste validé",
-    "Claimed Energizer milestone": "Objectif Générateur validé",
-    "Claimed Gardener milestone": "Objectif Jardinier validé",
-    "Claimed Generalist milestone": "Objectif Généraliste validé",
-    "Claimed Hoverlord milestone": "Objectif Aéronaute validé",
-    "Claimed Legend milestone": "Objectif Légende validé",
-    "Claimed Mayor milestone": "Objectif Maire validé",
-    "Claimed Planner milestone": "Objectif Planificateur validé",
-    "Claimed Polar Explorer milestone": "Objectif Polaire validé",
-    "Claimed Rim Settler milestone": "Objectif Frontalier validé",
-    "Claimed Specialist milestone": "Objectif Spécialiste validé",
-    "Claimed Tactician milestone": "Objectif Tacticien validé",
-    "Claimed Terraformer milestone": "Objectif Terraformeur validé",
-    "Claimed Tycoon milestone": "Objectif Visionnaire validé"
+    "of 14": "sur 14"
 }
