Minor punctuation fix (#7287)

--- a/src/locales/de/underworld_cards.json
+++ b/src/locales/de/underworld_cards.json
@@ -272,7 +272,7 @@
 "Action: Spend 1 tool resource on this card to excavate an underground resource.": "AKTION: Bezahle 1 Werkzeugressource von dieser Karte, um eine unterirdische Ressource auszugraben.",
 
 "Tunnel Boring Machine": "Tunnelbohrmaschine",
-"Action: Pay 3 energy to excavate 2 underground resources": "AKTION: Bezahle 3 Energie, um 2 unterirdische Ressourcen auszugraben.",
+"Action: Pay 3 energy to excavate 2 underground resources.": "AKTION: Bezahle 3 Energie, um 2 unterirdische Ressourcen auszugraben.",
 
 "Tunneling Subcontractor": "Tunnelbau Subunternehmer",
 "Gain 1 corruption. Excavate an underground resource.": "Erhalte 1 Korruption. Grabe eine unterirdische Ressource aus.",
