--- a/src/locales/hu/underworld_cards.json
+++ b/src/locales/hu/underworld_cards.json
@@ -194,7 +194,7 @@
   "Effect: Whenever you play a Jovian tag, (including this one), add 1 tool resource on this card.": "Hatás: Amikor Jupiter kártyát játszol ki, ezt is beleértve, rakj 1 szerszám erőforrást erre a kártyára!",
   "Action: Spend 1 tool resource on this card to excavate an underground resource.": "Akció: Költs el 1 szerszám erőforrást erről a kártyáról, hogy kiás 1 földalatti erőforrást!",
   "Tunnel Boring Machine": "Alagútfúró gép",
-  "Action: Pay 3 energy to excavate 2 underground resources": "Akció: Költs el 3 energiát, hogy kiás 2 földalatti erőforrást!",
+  "Action: Pay 3 energy to excavate 2 underground resources.": "Akció: Költs el 3 energiát, hogy kiás 2 földalatti erőforrást!",
   "Tunneling Subcontractor": "Alagútépítési alvállalkozó",
   "Gain 1 corruption. Excavate an underground resource.": "Kapsz 1 korrupciót. Áss ki 1 földalatti erőforrást!",
   "Underground Amusement Park": "Földalatti vidámpark",
