--- a/src/locales/jp/underworld_cards.json
+++ b/src/locales/jp/underworld_cards.json
@@ -271,7 +271,7 @@
     "Action: Spend 1 tool resource on this card to excavate an underground resource.": "アクション：このカード上から1工具除去し、地下資源を採掘する.",
 
     "Tunnel Boring Machine": "トンネルボーリングマシン",
-    "Action: Pay 3 energy to excavate 2 underground resources": "アクション：3電力支払い、2回地下資源を採掘する.",
+    "Action: Pay 3 energy to excavate 2 underground resources.": "アクション：3電力支払い、2回地下資源を採掘する.",
 
     "Tunneling Subcontractor": "トンネル工事請負業者",
     "Gain 1 corruption. Excavate an underground resource.": "1汚職獲得. 地下資源を採掘する.",
