--- a/src/locales/ko/underworld_cards.json
+++ b/src/locales/ko/underworld_cards.json
@@ -247,7 +247,7 @@
 "Action: Spend 1 tool resource on this card to excavate an underground resource.": "",
 
 "Tunnel Boring Machine": "",
-"Action: Pay 3 energy to excavate 2 underground resources": "",
+"Action: Pay 3 energy to excavate 2 underground resources.": "",
 
 "Tunneling Subcontractor": "",
 "Gain 1 corruption. Excavate an underground resource.": "",
