--- a/src/locales/ua/underworld_cards.json
+++ b/src/locales/ua/underworld_cards.json
@@ -265,7 +265,7 @@
   "Action: Spend 1 tool resource on this card to excavate an underground resource.": "Дія: Витратити 1 ресурс-інструменту на цій картці, щоб розкопати підземний ресурс.",
 
   "Tunnel Boring Machine": "Тунельна бурильна машина",
-  "Action: Pay 3 energy to excavate 2 underground resources": "Дія: Заплатити 3 одиниці енергії, щоб розкопати 2 підземні ресурси",
+  "Action: Pay 3 energy to excavate 2 underground resources.": "Дія: Заплатити 3 одиниці енергії, щоб розкопати 2 підземні ресурси",
 
   "Tunneling Subcontractor": "Підземний підрядник",
   "Gain 1 corruption. Excavate an underground resource.": "Отримайте 1 одиницю корупції. Розкопайте підземний ресурс.",
