German language updates due to recent changes (#7290)
* Update underworld_cards.json

small missing additions

* Update ares_cards.json

change due to recent changes

* Update promo_cards.json

change due to recent changes

* Update ui.json

small missing

* Update ui.json

Adapt MAs to the offiziel German translation from the publisher themselves.

--- a/src/locales/de/ui.json
+++ b/src/locales/de/ui.json
@@ -91,7 +91,7 @@
     "Have 64 M€": "Benötigt mindestens 64 M€-Ressourcen.",
     "Colonizer": "Kolonisator",
     "Have 4 colonies": "Benötigt 4 Kolonien im Spiel.",
-    "T. Collector": "Kassierer",
+    "T. Collector": "Erfinder",
     "Have 3 sets of automated (green), active (blue) and event (red) project cards in play": "Besitze 3 Sets aus automatischen, aktiven und Ereigniskarten.",
     "Diversifier": "Aufteiler",
     "Have 8 different tags in play": "Benötigt mindestens 8 unterschiediche, eigene Symbole im Spiel.",
@@ -117,7 +117,7 @@
     "Have 7 floater resources on your cards": "Benötigt mindestens 7 Schweber-Ressourcen auf eigenen Karten.",
     "Irrigator": "Bewässerer",
     "Own 4 tiles adjacent to oceans": "Benötigt 4 eigene Plättchen, die an Ozeane grenzen.",
-    "Land Specialist": "Land Spezialist",
+    "Land Specialist": "Manager",
     "Own 3 special (normally, brown) tiles": "Benötigt 3 Spezial-Plättchen (normale braune) im Spiel.",
     "Legend": "Legende",
     "Have 5 cards in your event pile": "Mindestens 5 eigene Ereigniskarten (rote Karten) ausgespielt.",
@@ -141,11 +141,11 @@
     "Own 3 tiles on the two bottom rows": "Benötigt 3 eigene Plättchen auf den unteren beiden Gebietsreihen.",
     "Rim Settler": "Grenzsiedler",
     "Have 3 Jovian tags in play": "Benötigt mindestens 3 eigene Jupiter-Symbole im Spiel.",
-    "Smith": "Metallindustrie",
+    "Smith": "Metallurge",
     "Have a total of 7 steel and titanium production": "Benötigt eine Stahl- und/oder Titan-Produktion in Summe von 7 oder mehr.",
     "Spacefarer": "Weltraumforscher",
     "Have 6 space tags in play": "Benötigt mindestens 6 eigene Weltraum-Symbole im Spiel.",
-    "V. Spacefarer": "Weltraumforscher",
+    "V. Spacefarer": "Astronaut",
     "Have 4 space tags in play": "Benötigt mindestens 4 eigene Weltraum-Symbole im Spiel.",
     "Specialist": "Spezialist",
     "Have 10 in production of any resource": "Eine Produktionsart mit Wert 10.",
@@ -171,15 +171,15 @@
     "Have removed at least 3 hazard tiles (excluding WGT)": "Mindestens 3 Gefahrenplättchen entfernt haben (außer WGT)",
     "Agronomist": "Agronom",
     "Have 4 plant tags in play": "Benötigt mindestens 4 eigene Pflanzensymbole im Spiel.",
-    "Farmer": "Züchter",
+    "Farmer": "Farmer",
     "Have 5 animal and microbe resources on your cards": "Benötigt mindestens 5 Tier- und/oder Mikrobenressourcen auf eigenen Karten.",
-    "Fundraiser": "Fondmanager",
+    "Fundraiser": "Anleger",
     "Have 12 M€ production": "Benötigt eine M€-Produktion von 12 oder mehr.",
     "Geologist": "Geologe",
     "Own 3 tiles ON or ADJACENT to volcanic areas": "Benötigt 3 Plättchen AUF oder ANGRENZEND an vulkanische Gebiete",
     "Hydrologist": "Hydrologe",
     "Have placed 4 oceans.": "Platziere 4 Ozeane.",
-    "Landshaper": "Architekt",
+    "Landshaper": "Landformer",
     "Have 1 city tile, 1 greenery and 1 special tile": "Benötigt 1 Stadt-, 1 Grünflächen- und 1 Spezial-Plättchen",
     "Lobbyist": "Lobbyist",
     "Having all 7 delegates in parties (Party Leaders and Chairman also count)": "Alle 7 Delegierten in den Parteien haben (Parteivorsitzende und Vorsitzender zählen auch).",
@@ -193,7 +193,7 @@
     "Have 4 science tags in play": "Benötigt mindestens 4 eigene Wissenschaftssymbole im Spiel.",
     "Sponsor": "Sponsor",
     "Have 3 cards that have cost of 20 M€ or more": "Benötigt 3 oder mehr ausgespielten Karten mit 20 M€ Mindestwert.",
-    "Thawer": "Erwärmer",
+    "Thawer": "Entfroster",
     "Have raised the temperature 5 steps.": "Benötigt 5 oder mehr eigene Schritte auf der Temperaturskala",
     "Engineer": "Thermotechniker ",
     "Have a total of 10 energy and heat production": "Benötigt eine Energie- und/oder Wärme-Produktion in Summe von 10 oder mehr.",
@@ -246,7 +246,7 @@
     "Have the most plant production": "Die höchste Pflanzen-Produktion haben.",
     "Promoter": "Koordinator",
     "Have the most cards in your event pile": "Die meisten gespielten Ereigniskarten.",
-    "Zoologist": "Zoologe",
+    "Zoologist": "Züchter",
     "Have the most animal resources": "Die meisten Tierressourcen haben.",
     "A. Manufacturer": "Hersteller",
     "Have the most active (blue) project cards in play": "Die meisten aktiven (blauen) Karten im Spiel haben.",
@@ -256,7 +256,7 @@
     "Have the most cards in play that directly alter your own production": "Die meisten Karten, die die eigene Produktion direkt verändern.",
     "Tourist": "Tourist",
     "Have the most empty spaces adjacent to your tiles": "Die meisten leeren Felder neben den eigenen Plättchen.",
-    "A. Zoologist": "Mikrozoologe",
+    "A. Zoologist": "Zoologe",
     "Own the most animal and microbe resources": "Die meisten Tier- und Mikroben-Ressourcen haben.",
     "Biologist": "Biologe",
     "Have the most animal, plant, and microbe tags in play": "Die meisten Tier-, Pflanzen- und Mikroben-Symbole im Spiel (keine Ereignisse).",
@@ -266,7 +266,7 @@
     "Have the most VP from city tile adjacencies on Mars": "Die meisten Siegpunkte aus der Nachbarschaft von Stadtplättchen auf dem Mars.",
     "Warmonger": "Kriegstreiber",
     "Play the most cards that reduce other players' resources or production": "Die meisten Karten, die die Ressourcen oder die Produktion anderer Spieler reduziert haben.",
-    "Forecaster": "Anpassungsfähige",
+    "Forecaster": "Meteorologe",
     "Have the most cards with requirements in play": "Die meisten Karten im Spiel mit Anforderungen.",
     "Edgedancer": "Randtänzer",
     "Own the most tiles on the edges of the board": "Die meisten Plättchen an den Rändern des Spielfelds.",
@@ -292,13 +292,13 @@
     "Have the most power tags in play.": "Die meisten Energie-Symbole im Spiel (Ereigniskarten zählen nicht).",
     "Founder": "Gründer",
     "Have the most tiles adjacent to special tiles.": "Die meisten Plättchen, die angrenzend zu Spezial-Plättchen liegen.",
-    "Highlander": "Hochländer",
+    "Highlander": "Bergsteiger",
     "Own the most tiles that are NOT adjacent to ocean tiles": "Die meisten Plättchen, die NICHT an Ozean-Felder angrenzen.",
     "Incorporator": "Firmeninhaber",
     "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "Die meisten Projektkarten mit Grundkosten von 10 M€ oder weniger im Spiel (keine Ereignisse).",
-    "Investor": "Investor",
+    "Investor": "Geldgeber",
     "Have the most Earth tags in play": "Die meisten Erd-Symbole im Spiel (Ereigniskarten zählen nicht).",
-    "Landscaper": "Landvermesser",
+    "Landscaper": "Naturkundler",
     "Most tiles connected together (each player counts largest group of tiles)": "Die meisten miteinander verbundenen eigener Plättchen (jeder Spieler zählt die größte Gruppe von Plättchen).",
     "Manufacturer": "Fabrikant",
     "Have the highest production of steel and heat combined.": "Die höchste Stahl- und Wärmeproduktion (in Summe) haben.",
@@ -843,7 +843,7 @@
     "Decrease energy": "Reduziere Energie-Produktion",
     "Select amount of energy to gain": "Wähle Menge an Energie, die du erhalten möchtest",
     "Select amount of energy to convert to heat": "Wähle Menge an Energie, die in Wärme umgewandelt werden soll",
-    "Select up to steel to convert to titanium": "Wähle Menge an Stahl, der in Titan umgewandelt werden soll",
+    "Select up to ${1} steel to convert to titanium": "Wähle bis zu ${1} Stahl, der in Titan umgewandelt werden soll",
     "Convert Steel": "Konvertiere Stahl",
     "Spend 1 plant to gain 7 M€.": "Bezahle 1 Pflanze, um 7 M€ zu erhalten",
     "Spend 1 steel to gain 7 M€.": "Bezahle 1 Stahl, um 7 M€ zu erhalten",
