--- a/src/locales/de/underworld_cards.json
+++ b/src/locales/de/underworld_cards.json
@@ -120,6 +120,7 @@
 
 "Labor Trafficking": "Arbeitskräftehandel",
 "FIRST": "ERSTE",
+"1ST": "1.",
 "Effect: The first standard project action you take each generation, except selling patents, costs 6 M€ less.": "EFFEKT: Die erste Standard-Projekt-Aktion, die Du pro Generation durchführst, außer dem Verkauf von Patenten, kostet 6 M€ weniger.",
 
 "Landfill": "Mülldeponie",
@@ -204,6 +205,7 @@
 "Requires 3 oceans. Reduce your heat production 1 step. At the end of this generation only, during the production phase, gain 12 M€ and 1 corruption.": "Benötigt 3 Ozeane. Verringere deine Wärme-Produktion um 1. Nur am Ende dieser Generation, während der Produktionsphase, erhalte 12 M€ und 1 Korruption.",
 
 "Public Spaceline": "Öffentliche Raumfahrtlinie",
+"Increase your M€ production 2 steps": "Erhöhe deine M€-Produktion um 2.",
 "Requires 5 space tags. This card has 2 Earth tags, 2 Jovian tags, 2 Venus tags, and 2 Mars tags.": "Benötigt 5 Weltraum-Symbole. Diese Karte hat 2 Erd-, 2 Jupiter-, 2 Venus- und 2 Mars-Symbole.",
 
 "Reckless Detonation": "Rücksichtslose Sprengung",
