feat: Double Corp variant support (1/2)
This commit introduces partial support for the Double Corp variant:
- Enables selecting two corporations during setup
- Adjusts initial megacredit calculation
- Adds preliminary handling logic for two corporations

Full integration (e.g., both corporations taking effect) will follow in commit 2/2.

--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -309,6 +309,7 @@
     "You cannot pay for this card": "你不能为此牌支付",
     "Select card(s) to buy": "选择你需要购买的牌",
     "Starting Megacredits:": "起始M€：",
+    "Starting Megacredits(doubleCorp-42):": "起始M€(双公司-42)：",
     "After Preludes:": "前序牌打出后M€：",
 
     "Select a space with a steel or titanium bonus adjacent to one of your tiles": "在你的板块旁选择一个钢铁奖励或者钛奖励的地块",
